В темах розницы и престо поправил цвет фона по умолчанию у зафиксированных заголовков
https://online.sbis.ru/opendoc.html?guid=96542f26-1d5a-4b3a-913d-8c4d49adc8eb

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -13,6 +13,8 @@
 @acent-color2:                            #F8F8F8;//Цвет акцентной плашки
 @default-hover-color:                     #E0ECF5;
 @innacent-color2:						         #999999; //Неакцентные элементы, заголовки таблиц, комментарии
+// TODO: Используется только в prestonew, в других темах вместо нее используется @default-bg-color. Выпилить.
+// https://online.sbis.ru/opendoc.html?guid=f5f36c75-e461-4e1c-82fc-4079c3cafa90
 @basic-block-bg-color:					      #f3f3f3; //Основной Фон при блочной вёрстке, верхний и нижний разделитель реестра, вверхняя граница полей ввода и вкладок не в фокусе
 //=============
 @black-color:                             #333;
