--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -175,3 +175,14 @@ body .ws-window {
 .controls-ComboBox__picker .controls-ComboBox__scrollContainer {
     background: transparent;
 }
+
+body {
+   .ws-sticky-header__block.ws-sticky-header__fixed,
+   .ws-sticky-header__table-header-copy {
+      // В престо в паре мест используется нестандартные цвета фона, чуть темнее или чуть светлее.
+      // В этих местах прикладники должны сами устанавливать цвет фона у зафиксированных заголовков.
+      // В большинстве реестров используется #2C3E50 - @basic-block-bg-color
+      // TODO: выпилить вместе с @basic-block-bg-color
+      background-color: #ffffff;
+   }
+}
