https://online.sbis.ru/opendoc.html?guid=6286e275-6395-4106-b8e1-49d5341614d9

--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -81,7 +81,7 @@
 @DropdownList-picker-head-margin:                                                                                       0;//todo: krasilnikov
 @DropdownList-picker-head-padding:                                                                                      0 8px;//todo: krasilnikov
 @DropdownList-picker-head-duplicate-type-top-padding:                                                                   0px;//todo: krasilnikov
-@DropdownList-picker-menu-item-padding:                                                                                 .1785rem .57rem .1071rem .57rem;
+@DropdownList-picker-menu-item-padding:                                                                                 .1785rem .57rem;
 @check-box-caption-margin-left:                                                                                         4px;//todo: juravlev
 //MoveDialog
 @controls-movedialog-min-width:                 536px;
