https://online.sbis.ru/opendoc.html?guid=be428a35-2e2f-458b-858b-67169d49bab1

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -833,6 +833,16 @@ body {
             border-left: @button-border;
             border-top: @button-border;
          }
+         &.ws-infobox-triangle-vertical-right {
+            right: -.54rem;
+            border-right: @button-border;
+            border-top: @button-border;
+         }
+         &.ws-infobox-triangle-vertical-left {
+            left: -.54rem;
+            border-left: @button-border;
+            border-bottom: @button-border;
+         }
       }
 
       .ws-infobox-content {
