https://online.sbis.ru/opendoc.html?guid=8270def1-c411-49cf-8a61-bb467d7f556b

--- a/components/Image/Image.tmpl
+++ b/components/Image/Image.tmpl
@@ -5,6 +5,7 @@
          tooltip="{{tooltip}}"
          alt="{{tooltip || name}}"
          src="{{!avoidCache || dataSource ? _templateImage}}"
+         style="{{ sizeMode === 'stretch' && (!avoidCache || dataSource) ? 'width: 100%'}}"
       />
       <ws:if data="{{imageBar}}">
          <div class="controls-image__image-bar" style="display: none;">
