цвет дополнительной ссылки по стандарту https://online.sbis.ru/opendoc.html?guid=a0a2acba-53bb-4b68-b24a-db609ae247b9

--- a/themes/general.less
+++ b/themes/general.less
@@ -91,7 +91,7 @@ input[type="reset"]::-moz-focus-inner {
     color: @link-additional-color;
   }
   &.additionalLink__2 {
-    color: @black-color;
+    color: @default-text-color;
   }
   &.additionalLink__3 {
     color: @red-color;
