https://online.sbis.ru/opendoc.html?guid=28d7249a-38dd-4e68-a178-800365441ea9

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -235,6 +235,7 @@
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
+         .flex-shrink(1);
          > div {
             vertical-align: top;
          }
