https://online.sbis.ru/opendoc.html?guid=155e2018-91e9-45d0-9fed-44fb130e5efb

--- a/components/SubmitPopup/SubmitPopup.less
+++ b/components/SubmitPopup/SubmitPopup.less
@@ -25,6 +25,9 @@
    line-height: normal;
    font-weight: @controls-SubmitPopup-message-font-weight;
    color: @controls-SubmitPopup-message-color;
+}
+
+.controls-SubmitPopup__message_withDetails {
    margin-bottom: @controls-SubmitPopup-message-margin-bottom;
 }
 
