--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -238,11 +238,11 @@
 @switcher-width:                                3.571rem;
 @switcher-height:                               1.786rem;
 @switcher-border-radius:                        2.143rem;
-@switcher-hover-border-width:                   0.107rem;
+@switcher-hover-border-width:                   0.1072rem;
 @switcherline-height:                           0.107rem;
 @switcherline-width:                            2.5rem;
 @switcher-btn-size:                             0.929rem;
-@switcher-btn-border-width:                     0.1072rem;
+@switcher-btn-border-width:                     @switcher-hover-border-width;
 @switcher-btn-hover-border-width:               @switcher-btn-border-width;
 @switcher-dot-size:                             @switcher-btn-size;
 @switcher-border-color:                         #37536C;
