https://online.sbis.ru/opendoc.html?guid=c83c9f86-3c49-4ec3-ae30-832759fdfa93

--- a/themes/online/colors.less
+++ b/themes/online/colors.less
@@ -4,6 +4,7 @@
 @error-bg-color:                                                                                                        #fadadd;
 @warning-color:                                                                                                         #fec63f;
 @success-color:                                                                                                         #72be44;
+@additional-color:                                                                                                      #999999;
 //default-colors
 @default-text-color:                                                                                                    #000;
 @default-border-color:                                                                                                  #eaeaea;
