--- a/themes/prestonew/colors.less
+++ b/themes/prestonew/colors.less
@@ -1,5 +1,6 @@
 @disabled-color:                                                                                                        #8991A9;
 //default-colors
+@additional-color:                                                                                                      #8991A9;
 @default-text-color:                                                                                                    #e4e4e4;
 @default-border-color:                                                                                                  rgba(96,170,221,.15);
 @default-border-color-second:                                                                                           #26B8FF;
