DateRange: Поправил тему для ie https://online.sbis.ru/opendoc.html?guid=ee42eb3c-46bc-4146-80fc-b913fbdaacb3

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -68,7 +68,7 @@
 
 // Выпилить в 3.17.150 с отказом от кнопок со стилями
 .controls-DateRangeBigChoose__years-yearsRange-btn {
-   :not(.controls-Button__big).controls-Button-size__default.controls-Button .controls-Button__wrapper {
+   &:not(.controls-Button__big).controls-Button-size__default.controls-Button .controls-Button__wrapper {
       padding: 0;
    }
 }
