https://online.sbis.ru/opendoc.html?guid=97f53d12-5149-4b6f-b872-a7c584e60e7d

--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -76,6 +76,8 @@
       .placeholder();
       .text-overflow();
       .flex-shrink();
+      .flex-basis(0);
+      .flex-grow(1);
       font: inherit;
       width: 100%;
       height: 100%;
