--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -487,7 +487,7 @@
 }
 
 //Пример баги в ios https://jsfiddle.net/zk5755vg/12/
-.ws-is-mobile-chrome-ios, .ws-is-mobile-safari, .ws-is-sbis-desktop {
+.ws-is-mobile-chrome-ios, .ws-is-mobile-safari, .ws-is-old-webkit {
    .controls-DropdownList__picker {
       .controls-DropdownList__body {
          display: block; //С флексовым контейнером в safari не отображается список (height:0). Флекс нужен для правильного обрезания контейнера по высоте, на моб.платформе это не актуально
