https://online.sbis.ru/opendoc.html?guid=3af89408-753b-4be8-99e1-c939ea4f98d8

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -51,7 +51,6 @@
    position:relative;
    height: 100%;
    width: 100%;
-   line-height: 20px !important;
    text-decoration: inherit;
    margin-right: 0;
 }
@@ -142,7 +141,7 @@
 
 .controls-FieldLink__itemsEdited {
    .controls-FieldLink__item-caption:hover {
-      text-decoration: @link-hover-text-decoration;
+      text-decoration: underline;
       cursor: pointer;
    }
 }
