--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -24,7 +24,7 @@
   }
   &.controls-Click__active {
     .controls-Button__text {
-      text-decoration: @link-active-text-decoration;
+      text-decoration: underline;
     }
   }
 
