https://online.sbis.ru/opendoc.html?guid=3af89408-753b-4be8-99e1-c939ea4f98d8

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -182,9 +182,8 @@
 
       &.ws-disabled {
          .controls-FieldLink__item {
+            //todo
             max-width: ~'calc(100% - '@controls-FieldLink-linkContainer-padding * 2~')';
-            padding: @controls-FieldLink-disabled-item-single-padding;
-            margin: @controls-FieldLink-disabled-item-single-margin;
          }
       }
    }
