https://online.sbis.ru/opendoc.html?guid=49f68592-849a-45eb-87ec-f82a4ca34302

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -431,6 +431,14 @@
    }
 }
 
+.ws-is-ie {
+   .controls-TabButton .controls-TabButton__mainText {
+      .controls-EditAtPlace__editor .controls-TextBox {
+         line-height: 20px;
+      }
+   }
+}
+
 .controls-TabButton__mainText.controls-EditAtPlace__ellipsis  .controls-EditAtPlace__fieldWrapper {
    height: auto;
 }
