DatePicker: Поправил иконку
https://online.sbis.ru/opendoc.html?guid=01963b96-9003-4476-97db-4cf1c9ca5b72

--- a/components/DatePicker/DatePicker.less
+++ b/components/DatePicker/DatePicker.less
@@ -1,6 +1,17 @@
 @import "../DateBox/DateBox";
 .controls-DatePicker {
    display: inline-block;
+
+   .controls-DatePicker__button {
+      //top: @date-picker-calendar-icon-top-offset;
+      //left: @date-picker-calendar-icon-left-offset;
+      .controls-Button__icon {
+         font-size: @date-picker-calendar-icon-size !important;
+         line-height: @date-picker-calendar-icon-size !important;
+         height: @date-picker-calendar-icon-size;
+         width: @date-picker-calendar-icon-size;
+      }
+   }
 }
 .controls-DatePicker__button {
    margin-left: @date-picker-icon-margin-left;
