--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -32,4 +32,4 @@
 @search-loop-size:                                                                                                      @default-icon-size;
 @search-form-icon-padding:                                                                                              0 2px;
 //time-header:
-@time-header-icon-size:																																																	@default-icon-size-medium;
+@time-header-icon-size:                                                                                                 @default-icon-size;
