--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -992,7 +992,7 @@
 @DropdownList-footer-select-top:                      0.28rem;
 @DropdownList-picker-menu-line-height:                3.24rem;
 @DropdownList-before-caption-wrapper-top:             0.16rem;
-@DropdownList-after-caption-wrapper-top:              .4rem;
+@DropdownList-after-caption-wrapper-top:              0;
 @DropdownList-footer-hasMore-left:                    .57rem;
 @DropdownList-footer-hasMore-left-multiselect:        2.35rem;
 @DropdownList-footer-hasMore-top-multiselect:         1rem;
