ссылка отрисованная с href должна занимать 100% ширину в случае когда ссылка отрисована без иконки, необходимо снять выравнивание, чтобы текст обрезался https://online.sbis.ru/opendoc.html?guid=137351d7-7a52-43e6-92ff-74c61f62f0cc

--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -66,6 +66,7 @@
   }
 
   .controls-Link-link {
+     width: 100%;
      color: inherit;
      text-decoration: inherit;
      cursor: inherit;
@@ -74,6 +75,9 @@
          text-decoration: none;
        }
      }
+    &.controls-Button__text {
+      display: inline-block;
+    }
   }
   .controls-Button__wrapper {
     .justify-content(flex-start);
