https://online.sbis.ru/opendoc.html?guid=d8ae7114-7d7a-4bc4-8d27-4fc5aebde529

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -172,6 +172,7 @@
 
 .controls-ListView__serviceFooter {
    padding: @listView-servicefooter-padding;
+   overflow: hidden;
 }
 
 .controls-ListView__loadMoreButton {
