--- a/components/ComboBox/ComboBox.less
+++ b/components/ComboBox/ComboBox.less
@@ -105,7 +105,7 @@
       }
    }
 }
-/*
+//TODO: только после окончательного отказа удалить (падает браузер)
 .ws-is-ie10 {
    .controls-ComboBox .controls-TextBox__afterFieldWrapper {
       margin-top: -1px;
@@ -117,4 +117,3 @@
       height: 100%; //ie10 падает, если высота рассчитывается через calc. Теперь для ie10 выпадающий список прибит к краю экрана без отступа, если контейнер имеет достаточную высоту.
    }
 }
-*/
