поправил цвет по стандарту https://online.sbis.ru/opendoc.html?guid=e1067311-9de3-49ec-a34b-6045532f56d5

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -252,7 +252,7 @@
 @switcher-do-text-margin:                       0.571rem;
 //Menu
 @popup-font-size:                         1.43rem; // откатил размер из-за того, что меню стало меньше чем кнпока т.к. в самих кнопках размер шрифта используется больший
-@menu-header-bg-color:                    #23b8ff;
+@menu-header-bg-color:                    #26B8FF;
 @menu-subpopup-margin:                    @menu-margin;
 @menu-border-width:                       @default-border-width;
 @menu-border-color:                       @default-border-color-second;
