https://online.sbis.ru/opendoc.html?guid=525fe906-c75e-48b9-8739-c4a19acb606a

--- a/components/MoneyTextBox/MoneyTextBox.less
+++ b/components/MoneyTextBox/MoneyTextBox.less
@@ -23,7 +23,7 @@
   }
 
   .controls-TextBox__wrapper {
-    padding: @text-box-wrapper-padding;//чтобы копейки были близко к основному тексту в задизабленом состоянии
+    padding: @text-box-input-padding;//чтобы копейки были близко к основному тексту в задизабленом состоянии
     .box-sizing(border-box);
     .justify-content(flex-end)
   }
