--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -457,7 +457,7 @@
 @text-box-focus-border-color:                   @text-box-bottom-border-color;
 @text-box-disabled-border-bottom:               1px solid #E4E4E4;
 @text-box-field-font-size:                      24px;
-@text-box-wrapper-padding:                      0 8px;
+@text-box-input-padding:                      0 8px;
 @text-box-field-after-margin:                   0 32px 0 0;
 @text-box-placeholder-line-height:              0;
 
