--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -11,7 +11,7 @@
 //textbox
 @text-box-height:                                                                                                       @default-height;
 @text-box-font-size:                                                                                                    @default-font-size;
-@text-box-wrapper-padding:                                                                                              0 @default-input-padding;
+@text-box-input-padding:                                                                                              0 @default-input-padding;
 @text-box-information-icon-size:                                                                                        13px;//по стандарту
 @text-box-border-radius:                                                                                                0px;
 //text-area
