--- a/themes/presto/variables.less
+++ b/themes/presto/variables.less
@@ -363,7 +363,7 @@
 // Text box //
 // -------- //
 
-@text-box-wrapper-padding:                0 4px;
+@text-box-input-padding:                0 4px;
 
 @text-box-field-min-height:               38px;
 @text-box-field-padding:                  0;
@@ -397,7 +397,7 @@
 
 @formatted-text-box-wrapper-min-height:         @text-box-field-min-height;
 
-@formatted-text-box-field-padding:              12px 0 0;
+
 
 
 // ----------- //
