--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -87,7 +87,7 @@
       outline: none;
       background: transparent;
       text-decoration: inherit;
-      padding: @text-box-wrapper-padding;
+      padding: @text-box-input-padding;
       //https://inside.tensor.ru/opendoc.html?guid=f0c1b032-e2e4-4e65-b98f-8f9413ac0652&des=
       &::-webkit-contacts-auto-fill-button {
          display: none !important;
@@ -109,7 +109,7 @@
       color: @default-placeholder-color;
       font: inherit;
       text-align: inherit;
-      padding: @text-box-wrapper-padding;
+      padding: @text-box-input-padding;
    }
 }
 .controls-TextBox__field-uppercase {
