--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1028,6 +1028,7 @@
 @date-picker-icon-margin-left:                  7px;
 
 @date-picker-calendar-icon-size:                18px;
+@date-picker-calendar-icon-line-height:         16px;
 
 // -------- //
 // Calendar //
@@ -1178,13 +1179,12 @@
 // ---------- //
 @controls-date-range-year-marginleft:             0;
 @date-range-choose-year-line-height:            @date-range-choose-year-height + 1;
-@date-range-font-size:                          14px;
 @date-range-line-height:                        24px;
 @date-range-text-line-height:                   normal;
 @date-range-icon-button-size:                   18px;
 @date-range-icon-button-line-height:            16px;
 @date-range-icon-button-top:                    4px;
-@date-range-icon-button-margin:                 0 0 3px 8px;
+@date-range-icon-button-margin:                 0 0 0 8px;
 @date-range-icon-button-hover-color:            @hover-color !important;
 @date-range-dash-width:                         2px;
 @date-range-dash-color:                         @black-color;
