--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -381,7 +381,9 @@
 @suggest-list-item-hover-bg:              #f3f3f3;
 @suggest-list-item-selected-bg:           darken(@suggest-list-item-hover-bg, 5%);
 //Date picker
-//@date-picker-icon-margin-left:   6px; TODO: поставить правильное значение
+@date-picker-icon-margin-left:            0;
+@date-picker-calendar-icon-size:          3rem;
+@date-picker-calendar-icon-line-height:   3rem;
 //Calendar
 @calendar-width:                          auto;
 @calendar-bg:                             @basic-block-bg-color;
@@ -431,7 +433,6 @@
 @month-picker-item-active-text-color:     @secondary-color;
 @month-picker-item-active-bg:             @primary-color;
 //Data Range
-@date-range-font-size:                    1.14rem;
 @date-range-line-height:                  normal;
 @date-range-icon-button-top:              0.536rem;
 @date-range-dash-width:                   0.5rem;
