https://online.sbis.ru/opendoc.html?guid=525fe906-c75e-48b9-8739-c4a19acb606a

--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -31,5 +31,7 @@
 @search-button-wrapper-padding:                                                                                         0 5px 0 0;
 @search-loop-size:                                                                                                      @default-icon-size;
 @search-form-icon-padding:                                                                                              0 2px;
+//fieldLink
+@fieldLink-icon-size:                                                                                                   @default-icon-size;
 //time-header:
 @time-header-icon-size:                                                                                                 @default-icon-size;
