--- a/themes/presto/variables.less
+++ b/themes/presto/variables.less
@@ -830,29 +830,29 @@
 @controls-filterLine-copyCross-cross-top:         3px;
 
 //FieldLink
-@controls-FieldLink-showAllLinks-lineHeight:       22px;
-@controls-FieldLink-linkItem-line-height:          18px;
-@controls-FieldLink-showAllLinks-width:            20px;
+@fieldLink-showAllLinks-lineHeight:       22px;
+@fieldLink-linkItem-line-height:          18px;
+@fieldLink-showAllLinks-width:            20px;
 
-@controls-FieldLink-linkItem-margin:               2px 0;
-@controls-FieldLink-linkItem-padding:              0 17px 0 4px;
-@controls-FieldLink-linkItem-caption-height:       16px;
-@controls-FieldLink-linkItem-cross-width:          20px;
-@controls-FieldLink-linkItem-cross-right:          -4px;
-@controls-FieldLink-linkItem-cross-top:            -3px;
+@fieldLink-linkItem-margin:               2px 0;
+@fieldLink-linkItem-padding:              0 17px 0 4px;
+@fieldLink-linkItem-caption-height:       16px;
+@fieldLink-linkItem-cross-width:          20px;
+@fieldLink-linkItem-cross-right:          -4px;
+@fieldLink-linkItem-cross-top:            -3px;
 
-@controls-FieldLink-afterField-padding:            0 4px 0 0;
+@fieldLink-afterField-padding:            0 4px 0 0;
 
 
-@controls-FieldLink-afterField-background:         @white-color;
-@controls-FieldLink-link-color:                    #8991A9;
-@controls-FieldLink-link-color-hover:              #313E78;
-@controls-FieldLink-showAll-shadow-width:          20px;
-@controls-FieldLink-showAll-margin-right-ff:       -15px;
-@controls-FieldLink-showAll-top-ff:                -24px;
+@fieldLink-afterField-background:         @white-color;
+@fieldLink-link-color:                    #8991A9;
+@fieldLink-link-color-hover:              #313E78;
+@fieldLink-showAll-shadow-width:          20px;
+@fieldLink-showAll-margin-right-ff:       -15px;
+@fieldLink-showAll-top-ff:                -24px;
 
-@controls-FieldLink-big-fontSize:                  15px;
-@controls-FieldLink-big-fontSize-color:            #313E78;
+@fieldLink-big-fontSize:                  15px;
+@fieldLink-big-fontSize-color:            #313E78;
 
 //SelectorButton
 @controls-SelectorButton-align:                    middle;
