--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -28,6 +28,8 @@
 @search-loop-size:                                                                                                      2.8571rem;
 @search-form-icon-padding:                                                                                              0;
 @search-field-padding:                                                                                                  0 0 0 @default-input-padding;
+//fieldLink
+@fieldLink-icon-size:                                                                                                   @default-icon-size-large;
 //button
 @button-border-radius:                                                                                                  0px;
 @button-checked-text-margin-left:                                                                                       0.57rem; //todo: romanov
