--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -3,7 +3,7 @@
       .inline-flexbox();
       .flex-shrink(0);
       .flex-direction(row-reverse);
-      max-width: ~'calc(100% - '@controls-FieldLink-linkItem-cross-width~')';
+      max-width: ~'calc(100% - '@fieldLink-linkItem-cross-width~')';
       overflow: hidden;
    }
    .controls-FieldLink__linksWrapper {
@@ -23,8 +23,8 @@
          &:after {
             content: '';
             position: absolute;
-            right: -@controls-FieldLink-showAll-shadow-width;
-            width: @controls-FieldLink-showAll-shadow-width;
+            right: -@fieldLink-showAll-shadow-width;
+            width: @fieldLink-showAll-shadow-width;
             top: 0;
             bottom: 0;
             .horizontal-gradient(@white-color, rgba(255, 255, 255, 0));
@@ -44,6 +44,9 @@
          .justify-content();
       }
    }
+   .icon-size {
+      .icon-size(@fieldLink-icon-size);
+   }
 }
 .controls-FieldLink__fieldWrapper {
    .inline-flexbox();
@@ -56,12 +59,12 @@
 }
 
 .controls-FieldLink__picker {
-   max-height: @controls-FieldLink-picker-max-height;
-   min-height: @controls-FieldLink-picker-min-height;
-   border: @controls-FieldLink-border @gray-ccc-color;
+   max-height: @fieldLink-picker-max-height;
+   min-height: @fieldLink-picker-min-height;
+   border: @fieldLink-border @gray-ccc-color;
    margin-top: 0;
    overflow: auto;
-   padding: @controls-FieldLink-linkContainer-padding;
+   padding: @fieldLink-linkContainer-padding;
    border-top: none;
    .flexbox();
    .flex-wrap(wrap);
@@ -85,16 +88,16 @@
 
       .controls-FieldLink__item-caption {
          .text-overflow();
-         height: @controls-FieldLink-linkItem-line-height;
+         height: @fieldLink-linkItem-line-height;
       }
    }
    //todo: надо ли?
    &.ws-disabled .controls-FieldLink__item-caption {
-      margin-right: @controls-FieldLink-disabled-item-picker-margin;
+      margin-right: @fieldLink-disabled-item-picker-margin;
    }
 
    &.controls-popup-revert-vertical {
-      border-top: @controls-FieldLink-border @gray-ccc-color;
+      border-top: @fieldLink-border @gray-ccc-color;
       border-bottom: none;
    }
 }
@@ -104,7 +107,7 @@
    display: inline-block;
    position: relative;
    height:100%;
-   padding: @controls-FieldLink-linkItem-padding;
+   padding: @fieldLink-linkItem-padding;
    &:after {
       position: absolute;
       right: 0;
@@ -117,15 +120,15 @@
 }
 
 .controls-FieldLink__item-caption {
-   height: @controls-FieldLink-linkItem-caption-height;
+   height: @fieldLink-linkItem-caption-height;
    font-size: @default-font-size;
 }
 
 .controls-FieldLink__item-cross {
    position: absolute;
-   right: @controls-FieldLink-linkItem-cross-right;
+   right: @fieldLink-linkItem-cross-right;
    top: 0;
-   padding: @controls-FieldLink-linkItem-cross-padding;
+   padding: @fieldLink-linkItem-cross-padding;
    cursor: pointer;
    z-index: 1;
 }
@@ -160,9 +163,9 @@
 
 .controls-FieldLink__big-fontSize {
    .controls-FieldLink__item-caption {
-      font-size: @controls-FieldLink-big-fontSize;
+      font-size: @fieldLink-big-fontSize;
       font-weight: bold;
-      color: @controls-FieldLink-big-fontSize-color;
+      color: @fieldLink-big-fontSize-color;
    }
 }
 
@@ -183,15 +186,15 @@
       &.ws-disabled {
          .controls-FieldLink__item {
             //todo
-            max-width: ~'calc(100% - '@controls-FieldLink-linkContainer-padding * 2~')';
+            max-width: ~'calc(100% - '@fieldLink-linkContainer-padding * 2~')';
          }
       }
    }
 
    &.controls-Picker__show {
-      background: @controls-FieldLink-picker-show-color;
+      background: @fieldLink-picker-show-color;
       .controls-TextBox__field {
-         color: @controls-FieldLink-picker-show-field-color
+         color: @fieldLink-picker-show-field-color
       }
    }
 	
@@ -202,13 +205,13 @@
       }
 
       .controls-FieldLink__item {
-         padding: @controls-FieldLink-disabled-item-padding;
+         padding: @fieldLink-disabled-item-padding;
       }
 
    }
 
    .controls-FieldLink__dropAllLinks {
-      color: @controls-FieldLink-link-color;
+      color: @fieldLink-link-color;
       display: none;
    }
 
@@ -236,7 +239,7 @@
 
 .controls-TextBox__afterFieldWrapper {
    .controls-FieldLink__dropAllLinks, .controls-FieldLink__showSelector {
-      padding: @controls-FieldLink-afterField-padding;
+      padding: @fieldLink-afterField-padding;
    }
 }
 
@@ -248,7 +251,7 @@
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/--*
       т.к. min-width нужен только для темизации, то делаю его
       через custom property */
-   --min-width: @controls-FieldLink-fieldWrapper-minWidth;
+   --min-width: @fieldLink-fieldWrapper-minWidth;
 }
 
 .controls-FieldLink__selected:not(.controls-FieldLink__multiselect):not(.controls-FieldLink__inputMinWidth) .controls-FieldLink__fieldWrapper {
@@ -257,14 +260,14 @@
 }
 
 .controls-FieldLink__Link.ws-enabled {
-   color: @controls-FieldLink-link-color;
+   color: @fieldLink-link-color;
 
    .controls-Button__text {
       text-decoration: underline;
    }
    
    &:hover {
-      color: @controls-FieldLink-link-color-hover;
+      color: @fieldLink-link-color-hover;
    }
 }
 
@@ -287,8 +290,8 @@
 .controls-Link.controls-FieldLink__showAllLinks {
    position: relative;
    width: 20px;
-   line-height: @controls-FieldLink-showAllLinks-lineHeight;
-   padding: @controls-FieldLink-showAllLinks-padding;
+   line-height: @fieldLink-showAllLinks-lineHeight;
+   padding: @fieldLink-showAllLinks-padding;
    display: none;
    .flex-shrink(0);
 }
@@ -319,7 +322,7 @@
          &:not(.controls-Suggest__picker) {
             border-top: none;
          }
-         border-bottom: @controls-FieldLink-border @gray-ccc-color;
+         border-bottom: @fieldLink-border @gray-ccc-color;
       }
    }
 }
@@ -327,7 +330,7 @@
 .ws-is-ie10 {
    /* ie10 не поддерживает custom property */
    .ws-enabled.controls-FieldLink__inputMinWidth .controls-FieldLink__fieldWrapper {
-      min-width: @controls-FieldLink-fieldWrapper-minWidth;
+      min-width: @fieldLink-fieldWrapper-minWidth;
    }
    
    .controls-FieldLink__picker:not(.controls-Suggest__picker) .controls-FieldLink__item-caption {
@@ -339,14 +342,14 @@
    реальная ширина увеличивается на 2px */
 .ws-is-desktop-safari, .ws-is-mobile-safari, .ws-is-mobile-chrome-ios {
    .controls-FieldLink.controls-FieldLink__selected-single.ws-disabled .controls-FieldLink__item{
-      max-width: ~'calc(100% - '(@controls-FieldLink-linkContainer-padding * 2) - 1~')';
+      max-width: ~'calc(100% - '(@fieldLink-linkContainer-padding * 2) - 1~')';
    }
 }
 
 .controls-FieldLink__showSelector {
-   color: @controls-FieldLink-showSelector-color;
+   color: @fieldLink-showSelector-color;
 }
 
 .ws-is-desktop-platform .controls-FieldLink__showSelector:hover {
-   color: @controls-FieldLink-showSelector-color-hover;
+   color: @fieldLink-showSelector-color-hover;
 }
