--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -118,14 +118,14 @@
 // Calendar
 @calendar-bg:                             darken(@secondary-color, 5%);
 //FieldLink
-@controls-FieldLink-picker-show-color:    @white-color;
-@controls-FieldLink-picker-show-field-color: @default-text-color;
-@controls-FieldLink-link-color:           #2D68B5;
-@controls-FieldLink-FilterButton-color:   #2D68B5;
-@controls-FieldLink-FilterButton-color-hover:#2D68B5;
-@controls-FieldLink-border-color-focus-hover:@gray-ccc-color;
-@controls-FieldLink-border-color-picker-show:#0055BB;
-@controls-FieldLink-showSelector-color:   #2D68B5;
+@fieldLink-picker-show-color:    @white-color;
+@fieldLink-picker-show-field-color: @default-text-color;
+@fieldLink-link-color:           #2D68B5;
+@fieldLink-FilterButton-color:   #2D68B5;
+@fieldLink-FilterButton-color-hover:#2D68B5;
+@fieldLink-border-color-focus-hover:@gray-ccc-color;
+@fieldLink-border-color-picker-show:#0055BB;
+@fieldLink-showSelector-color:   #2D68B5;
 // MonthView //
 @month-view-bg:                           @white-color;
 @month-view-day-cell-text-color:          inherit;
@@ -269,7 +269,7 @@
 @closeButtonImageHover:                         url('img/areaCloseButton.png') 0 -3rem;
 @DropdownList-linkStyleHoverColor:		      #313E78;
 @back-button-text-color:                     #313E78;
-@controls-FieldLink-link-color-hover:        #313E78;
+@fieldLink-link-color-hover:        #313E78;
 @icon-active-color:                          #313E78;
 
 //----------------//
