https://online.sbis.ru/opendoc.html?guid=7d9fc8e5-0a10-4f85-a0d4-bed9f7381424

--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -170,6 +170,11 @@ body.ws-is-ie .controls-ScrollContainer__content {
       margin-right: -12px;
       padding-right: 12px;
    }
+
+   // Desktop Win10 IE
+   body.ws-is-windows-10.ws-is-ie:not(.ws-is-touch) & {
+      margin-right: -12px;
+   }
 }
 
 .controls-ScrollContainer__paging {
