--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -51,6 +51,7 @@
 .controls-ScrollContainer__content {
    position: relative;
    overflow-y: scroll;
+   overflow-x: hidden;
    height: 100%;
    max-height: inherit;
    min-width: inherit;
