--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -143,7 +143,7 @@
       }
    }
    &.controls-TabButton__main-item {
-      min-width: 0; //Нужно, чтобы flex правильно позиционировал ужимаемый контейнер
+      min-width: 1px; //Нужно, чтобы flex правильно позиционировал ужимаемый контейнер. с 0 в ie11 не работает
       .controls-TabButton__inner{
          font-size: @tab-button-large-inner-font-size;
          font-weight: @tab-button-large-inner-font-weight;
