--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -31,5 +31,8 @@
 @search-button-wrapper-padding:                                                                                         0 5px 0 0;
 @search-loop-size:                                                                                                      @default-icon-size;
 @search-form-icon-padding:                                                                                              0 2px;
+//fieldLink
+@fieldLink-showAll-shadow-width:                                                                                        20px;
+@fieldLink-linkItem-line-height :                                                                                       @default-line-height;
 //time-header:
 @time-header-icon-size:                                                                                                 @default-icon-size;
