https://online.sbis.ru/opendoc.html?guid=36f79977-3718-4a41-a95a-494b2e9044e8

--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -143,7 +143,7 @@ body.ws-is-ie .controls-ScrollContainer__content {
    display: none;
 }
 
-.controls-ScrollContainer__scrollbar_show > .controls-Scrollbar {
+.controls-ScrollContainer__scrollbar_show:not(.controls-ScrollContainer__hiddenScrollbar) > .controls-Scrollbar {
    display: block;
 }
 
