--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -33,6 +33,7 @@
 @search-form-icon-padding:                                                                                              0 2px;
 //fieldLink
 @fieldLink-icon-size:                                                                                                   @default-icon-size;
+@fieldLink-picker-icon-size:                                                                                            @default-icon-size;
 @fieldLink-showAll-shadow-width:                                                                                        20px;
 @fieldLink-linkItem-line-height:                                                                                        @default-line-height;
 //time-header:
