--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -23,6 +23,8 @@
            }
            .controls-DropdownList__value {
               .align-self(baseline);
+              overflow: hidden;
+              text-overflow: ellipsis;
               &:hover{
                  color: @DropdownList-linkStyleHoverColor;
                  text-decoration: underline;
