Выравнивание по стандарту в ie
https://online.sbis.ru/opendoc.html?guid=b3775b86-ec17-4148-a692-5c7943ef6181

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -433,9 +433,17 @@
 }
 
 .ws-is-ie {
-   .controls-TabButton .controls-TabButton__mainText {
-      .controls-EditAtPlace__editor .controls-TextBox {
-         line-height: 20px;
+   .controls-TabButton {
+      .controls-TabButton__mainText {
+         line-height: 25px;
+         .controls-EditAtPlace__editor .controls-TextBox {
+            line-height: 20px;
+         }
+      }
+      .controls-TabButton__additionalText2 {
+         .controls-EditAtPlace .controls-EditAtPlace__textField {
+            padding: 0;
+         }
       }
    }
 }
