https://online.sbis.ru/opendoc.html?guid=65cfba89-69fb-490a-b2bb-28bb983e92b3

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2247,6 +2247,7 @@
 // BackButton
 @back-button-font-size:                            18px;
 @back-button-line-height:                          @default-height;
+@back-button-height:                               @default-height;
 @back-button-margin-before:                        0;
 @back-button-padding-before:                       0;
 @back-button-arrow-height:                         24px;
