--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -755,6 +755,7 @@
 // BackButton
 @back-button-font-size:                   1.43rem;
 @back-button-line-height:                 1.7857rem;
+@back-button-height:                      1.7857rem;
 @back-button-arrow-hover-color:           @default-hover-color;
 // BreadCrumbs
 @back-button-arrow-paddingleft:           .5714rem;
