--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2281,6 +2281,7 @@
 @controls-movedialog-min-width:                    auto;
 @controls-movedialog-max-width:                    400px;
 @controls-movedialog-height:                       400px;
+@controls-movedialog-width:                        400px;
 @controls-movedialog-padding:                      0 0 5px 0;
 @controls-movedialog-min-height:                   50px;
 
