поправил выравнивание стрелки пункта с подменю и границы подменю убираю outline т.к. без паковки он прилетает позже и перебивает стили меню https://online.sbis.ru/opendoc.html?guid=f8d48390-5d55-4c52-9f48-b4e8afe804b8

--- a/components/Menu/Menu.less
+++ b/components/Menu/Menu.less
@@ -110,6 +110,7 @@
 .controls-Menu__SubMenuPopup {
    margin: @menu-subpopup-margin;
    padding: @menu-subpopup-padding;
+   border: none;
 }
 
 .controls-Menu {
