--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -253,14 +253,14 @@
 //Menu
 @popup-font-size:                         1.43rem; // откатил размер из-за того, что меню стало меньше чем кнпока т.к. в самих кнопках размер шрифта используется больший
 @menu-header-bg-color:                    #26B8FF;
-@menu-subpopup-margin:                    @menu-margin;
+@menu-subpopup-margin:                    0 0 0 @default-border-width;
 @menu-border-width:                       @default-border-width;
 @menu-border-color:                       @default-border-color-second;
 @menu-header-caption-color:               #e4e4e4;
 @menu-expand-width:                       @icon-large-size;
 @menu-expand-height:                      @icon-large-size;
-@menu-expand-top-offset:                  .7142rem;
-@menu-expand-right-offset:                .4285rem;
+@menu-expand-top-offset:                  .286rem;
+@menu-expand-right-offset:                0;
 @menu-expand-border-width:                0;
 @menu-expand-border-color:                transparent transparent transparent @primary-color;
 @menu-expand-bg:                          transparent;
