https://online.sbis.ru/opendoc.html?guid=7dfd5ef0-f03f-40af-897f-4308c014ebfa

--- a/components/WSControls/Containers/Page.tmpl
+++ b/components/WSControls/Containers/Page.tmpl
@@ -10,7 +10,7 @@
     <link key="core-min-css-for-page" rel="stylesheet" data-pack-name="ws-core-styles" type="text/css" href="{{wsRoot}}css/core-min.css" />
 </head>
 <body id="body" key="1_2_">
-    <ws:WSControls.Containers.Blackbox />
+    <ws:TestsPlatform.Containers.Blackbox />
     <ws:if data="{{ template }}">
         <ws:partial template="{{ template }}" scope="{{ _tplConfig }}"></ws:partial>
     </ws:if>
