MonthView: Поправил позиционирование дней в chrome на ios
https://online.sbis.ru/opendoc.html?guid=4793dfee-fa28-462d-a65c-086d0c794dfa

--- a/components/MonthView/MonthView.less
+++ b/components/MonthView/MonthView.less
@@ -1,5 +1,7 @@
 @month-view-day-weekend-color: #EF463A;
 
+// В хром на ipad установлен класс ws-is-old-webkit, но не установлен ws-is-webkit. В текущую версию фиксим по месту.
+.ws-is-old-webkit,
 .ws-is-webkit {
    // в 3.17.150 вместе с упрощение селекторов сделать везде однотипно(через position: absolute),
    // а исключение сделать для ie. Либо подумать как свертстать по дургому.
