--- a/components/ProgressBar/ProgressBar.tmpl
+++ b/components/ProgressBar/ProgressBar.tmpl
@@ -1,7 +1,7 @@
 <div class="controls-ProgressBar controls-ProgressBar_align-{{_options.progressPosition}}">
    <ws:template name="progress">
       <div
-         class="controls-ProgressBar__progress controls-ProgressBar__progress_size controls-ProgressBar__progress_color controls-ProgressBar__progress_colorValue"
+         class="controls-ProgressBar__progress"
          style="background-size: {{progressPercent}} 100%;"
       >{{progressPercent}}</div>
    </ws:template>
