прыгает диалог в ie11 https://online.sbis.ru/opendoc.html?guid=5f208ad7-0eca-4d30-8b33-b2d69fc21e3f

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -775,6 +775,7 @@
 @controls-Paging-padding:                 0;
 @controls-movedialog-min-height:          3.5714rem;
 @controls-movedialog-max-width:           25rem;
+@controls-movedialog-width:               25rem;
 //ScrollContainer
 @controls-ScrollContainer-top-gradient-height:0.857rem;
 //Scrollbar
