--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -585,6 +585,7 @@
 @controls-movedialog-activate-top:              10px;
 @controls-movedialog-min-width:                 536px;
 @controls-movedialog-max-width:                 536px;
+@controls-movedialog-width:                     536px;
 
 // PrintDialog
 @controls-printdialog-activate-right:           @controls-movedialog-activate-right;
