https://online.sbis.ru/opendoc.html?guid=515ec034-2c43-4fdd-bae9-2537ff3cf7a7

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -1,7 +1,8 @@
 .controls-TabButton {
    vertical-align: @tab-button-vertical-align;
    cursor: @tab-button-cursor;
-   height: @tab-button-height;
+   height: 100%;
+   box-sizing: border-box;
    position: @tab-button-position;
    color: @tab-button-color;
    font: @tab-button-font;
