квадратные toggleButton для розницы https://online.sbis.ru/opendoc.html?guid=6fa07793-c5d8-4ac9-bca1-741496a66dec

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -528,9 +528,12 @@ body .controls-DropdownList__picker {
 // фикс нужен для квадратных кнопок в редизайне. т.к. по задумке проектировщиков иконка должна занимать все пространство внутри кнопки
 // из-за этого приходится спиливать стандартные отступы
 .controls-Button {
-  &.controls-Button__withoutCaption.controls-Button-size__default:not(.controls-Button__big) {
-    .controls-Button__wrapper {
-      padding: 0;
+  &.controls-Button__withoutCaption {
+    &.controls-Button-size__default:not(.controls-Button__big),
+    &.controls-ToggleButton__normal.controls-Checked__checked:not(.ws-disabled).controls-Button-size__default:not(.controls-Button__big) {
+      .controls-Button__wrapper {
+        padding: 0;
+      }
     }
   }
 }
